--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ cmake-*
 build
 .DS_Store
 *.pdf
+
+#Build Results
+*.o
+*.d
+*.eep
+*.elf
+*.hex
+*.map
+*.srec
+*.lss
+
+#User Specific Files
+*.atsuo
